--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "gsap": "^3.12.5",
     "motion": "^12.0.5",
     "react": "^18.3.1",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.28.0",
     "swiper": "^11.2.1",
     "web-vitals": "^2.1.4"
   },
