--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Jaine",
-  "name": "IT'S A ME, JAINE!",
+  "name": "IT'S JAINE!",
   "icons": [
     {
       "src": "favicon.ico",
